tests/ui/cached_name_invalid_ident.stderr
error: `name` must be a valid Rust identifier
 --> tests/ui/cached_name_invalid_ident.rs:4:4
  |
4 | fn f(x: i32) -> i32 {
  |    ^
